--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,20 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0",
+  "npmClient": "yarn",
+  "useWorkspaces": true,
+  "packages": ["packages/*"],
+  "version": "independent",
   "hoist": true,
   "stream": true,
   "bootstrap": {
-    "npmClientArgs": ["--no-package-lock"]
+    "npmClientArgs": ["--no-package-lock", "--no-yarn-lock"]
+  },
+  "command": {
+    "publish": {
+      "registry": "https://registry.npmjs.org"
+    },
+    "version": {
+      "conventionalCommits": true,
+      "message": "chore(release): publish"
+    }
   }
 }
