--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@uyu-vue/builder",
   "version": "0.0.0",
+  "private": true,
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "fezzc <zhouzuchuan@sina.com>",
@@ -41,6 +42,8 @@
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-postcss": "3",
     "vuetify": "^2.5.6"
   },
   "peerDependencies": {
