--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -6,13 +6,16 @@
   "author": "fezzc <zhouzuchuan@sina.com>",
   "homepage": "https://github.com/u-fe/uyu-vue/tree/main/packages/pagination#readme",
   "license": "ISC",
-  "main": "lib/index.js",
+  "main": "dist/pagination.cjs.js",
+  "module": "dist/pagination.esm.js",
+  "src": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
