--- a/lerna.json
+++ b/lerna.json
@@ -14,7 +14,7 @@
     },
     "version": {
       "conventionalCommits": true,
-      "message": "chore(release): publish"
+      "message": "chore(release): publish %s"
     }
   }
 }
