feat(global): dev

--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -33,5 +33,6 @@
   },
   "devDependencies": {
     "@uyu-vue/builder": "^0.0.2"
-  }
+  },
+  "gitHead": "ebc9bccca4fdc9697b6086d567174820af7ca0e2"
 }
