--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/u-fe/uyu-vue#readme",
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@storybook/addon-actions": "^6.3.4",
     "@storybook/addon-essentials": "^6.3.4",
@@ -33,8 +35,12 @@
     "@storybook/addons": "^6.3.4",
     "@storybook/theming": "^6.3.4",
     "@storybook/vue": "^6.3.4",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "commitizen": "^4.2.4",
+    "cz-customizable": "^6.3.0",
     "deepmerge": "^4.2.2",
     "eslint": "^7.30.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -53,5 +59,21 @@
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.5.6"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "packages/**/*.{js,vue}": [
+      "prettier --write",
+      "npm run lint"
+    ]
   }
 }
