--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -38,13 +38,20 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "rollup": "^2.53.1",
-    "rollup-plugin-vue": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "cross-env": "^7.0.3",
+    "fs-extra": "^10.0.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-postcss": "3",
-    "vuetify": "^2.5.6"
+    "rollup-plugin-vue": "5.1.9",
+    "shelljs": "^0.8.4",
+    "vue-loader": "^15.9.8",
+    "vuetify": "^2.5.6",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2"
   },
   "peerDependencies": {
     "vuetify": "2.x"
