--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -37,8 +37,7 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
-    "rollup": "^2.53.1",
-    "vue-template-compiler": "^2.6.14"
+    "rollup": "^2.53.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -49,6 +48,7 @@
     "rollup-plugin-vue": "5.1.9",
     "shelljs": "^0.8.4",
     "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.5.6",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
