--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -31,18 +31,17 @@
   "bugs": {
     "url": "https://github.com/u-fe/uyu-vue/issues"
   },
-  "dependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "rollup": "^2.53.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
     "cross-env": "^7.0.3",
     "fs-extra": "^10.0.0",
+    "rollup": "^2.56.2",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-postcss": "3",
     "rollup-plugin-vue": "5.1.9",
